force-app/main/default/objects/User_Login_Detail__c/User_Login_Detail__c.object-meta.xml
<CustomObject>
    <label>User Login Detail</label>
    <nameField>
        <displayFormat>UWP-{00}</displayFormat>
        <label>User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserLoginDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>