force-app/main/default/objects/User_Login_Detail__c/fields/Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current User</label>
    <type>Checkbox</type>
</CustomField>