force-app/main/default/objects/User_Login_Detail__c/fields/Is_Profile_Pic_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Profile_Pic_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Profile Pic Uploaded</label>
    <type>Checkbox</type>
</CustomField>