force-app/main/default/objects/User_Login_Detail__c/fields/Profile_Picture_Path__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_Path__c</fullName>
    <label>Profile Picture Path</label>
    <length>200</length>
    <type>Text</type>
</CustomField>