force-app/main/default/objects/User_Login_Detail__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Will be used for login purpose</description>
    <formula>Last_Name__c + &apos; , &apos; +  First_Name__c</formula>
    <label>User Name</label>
    <type>Text</type>
</CustomField>